# wiki-exlorer

./: LICENSE  README.md  comparison.md  ТЗ_ChatGPT.md  ТЗ_DeepSeek.md
docs/: README-ChatGPT.md  README-DeepSeek.md
version_ChatGPT/: main.py  pyproject.toml  requirements.txt
version_ChatGPT/tests/: test_categories.py  test_graph.py  test_images.py  test_info.py  test_links.py  test_pageviews.py  test_random.py  test_search.py
version_ChatGPT/wiki_explorer/: cli.py  config.py  exceptions.py  logging_config.py
version_ChatGPT/wiki_explorer/api/: mediawiki_client.py  pageviews_client.py
version_ChatGPT/wiki_explorer/output/: __init__.py  chart_renderer.py  console_renderer.py
version_ChatGPT/wiki_explorer/services/: article_service.py  graph_service.py  image_service.py  pageviews_service.py
version_ChatGPT/wiki_explorer_gpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
version_DeepSeek/: README.md  setup.py
version_DeepSeek/tests/: conftest.py  test_categories_command.py  test_errors.py  test_graph_command.py  test_images_command.py  test_info_command.py  test_mediawiki.py  test_pageviews_api.py  test_pageviews_command.py  test_search_command.py
version_DeepSeek/wiki_explorer/: cli.py
version_DeepSeek/wiki_explorer/api/: mediawiki.py  pageviews.py
version_DeepSeek/wiki_explorer/commands/: categories.py  graph.py  images.py  info.py  links.py  pageviews.py  random.py  search.py
version_DeepSeek/wiki_explorer/utils/: errors.py  output.py
